poke/testsuite/poke.pkl/le-arrays-diag-1.pk
/* { dg-do compile } */

defvar e = [1,2,3] <= [4,5,6]; /* { dg-error "invalid operands" } */
